[workspace]
resolver = "2"
members = [
  "chat",
  "chat-utils"
]

[workspace.dependencies]
anyhow              = "^1"
once_cell           = "^1.19"

[workspace.dependencies.tokio]
features  = ["rt-multi-thread", "sync", "macros"]
version   = "^1.36"
workspace = true

[profile.release]
opt-level           = 3
overflow-checks     = false
debug-assertions    = false
lto                 = "thin"

[profile.fat-release]
inherits          = "release"
debug             = false
debug-assertions  = false
overflow-checks   = false
lto               = "fat"
